hotfix(user, auth): implement CORS support and update cookie security settings (#63)
